--- a/dockerfiles/Dockerfile.gateway-nginx
+++ b/dockerfiles/Dockerfile.gateway-nginx
@@ -1,9 +1,9 @@
 FROM nginx:alpine
 
-LABEL maintainer="yourname@example.com"
+ARG HTML_PATH
 
 COPY configs/nginx/gateway-nginx.conf /etc/nginx/nginx.conf
-COPY data/service-responses/index.html /usr/share/nginx/html/index.html
+COPY ${HTML_PATH} /usr/share/nginx/html/index.html
 
 HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
  CMD curl -f http://localhost || exit 1
