fix cross dc issue

--- a/configs/network/routing-tables.conf
+++ b/configs/network/routing-tables.conf
@@ -1,38 +1,23 @@
 # configs/network/routing-tables.conf
 # Enhanced routing with tier-based rules
 
-# DC1 to DC2 routes
-DC1    10.30.0.0/16    10.20.1.1    # DC1 to DC2 base
-DC1    10.31.10.0/24   10.20.1.1    # DC1 to DC2 Web Tier
-DC1    10.31.20.0/24   10.20.1.1    # DC1 to DC2 App Tier
-DC1    10.31.30.0/24   10.20.1.1    # DC1 to DC2 Data Tier
+# ========================
+# DC1 → Other Datacenters
+# ========================
 
-# DC1 to DC3 routes
-DC1    10.40.0.0/16    10.20.1.1    # DC1 to DC3 base
-DC1    10.41.10.0/24   10.20.1.1    # DC1 to DC3 Web Tier
-DC1    10.41.20.0/24   10.20.1.1    # DC1 to DC3 App Tier
-DC1    10.41.30.0/24   10.20.1.1    # DC1 to DC3 Data Tier
+DC1    10.30.0.0/16     10.20.1.1    # DC1 to DC2
+DC1    10.40.0.0/16     10.20.1.1    # DC1 to DC3
 
-# DC2 to DC1 routes
-DC2    10.20.0.0/16    10.30.1.1    # DC2 to DC1 base
-DC2    10.21.10.0/24   10.30.1.1    # DC2 to DC1 Web Tier
-DC2    10.21.20.0/24   10.30.1.1    # DC2 to DC1 App Tier
-DC2    10.21.30.0/24   10.30.1.1    # DC2 to DC1 Data Tier
+# ========================
+# DC2 → Other Datacenters
+# ========================
 
-# DC2 to DC3 routes
-DC2    10.40.0.0/16    10.30.1.1    # DC2 to DC3 base
-DC2    10.41.10.0/24   10.30.1.1    # DC2 to DC3 Web Tier
-DC2    10.41.20.0/24   10.30.1.1    # DC2 to DC3 App Tier
-DC2    10.41.30.0/24   10.30.1.1    # DC2 to DC3 Data Tier
+DC2    10.20.0.0/16     10.30.1.1    # DC2 to DC1
+DC2    10.40.0.0/16     10.30.1.1    # DC2 to DC3
 
-# DC3 to DC1 routes
-DC3    10.20.0.0/16    10.40.1.1    # DC3 to DC1 base
-DC3    10.21.10.0/24   10.40.1.1    # DC3 to DC1 Web Tier
-DC3    10.21.20.0/24   10.40.1.1    # DC3 to DC1 App Tier
-DC3    10.21.30.0/24   10.40.1.1    # DC3 to DC1 Data Tier
+# ========================
+# DC3 → Other Datacenters
+# ========================
 
-# DC3 to DC2 routes
-DC3    10.30.0.0/16    10.40.1.1    # DC3 to DC2 base
-DC3    10.31.10.0/24   10.40.1.1    # DC3 to DC2 Web Tier
-DC3    10.31.20.0/24   10.40.1.1    # DC3 to DC2 App Tier
-DC3    10.31.30.0/24   10.40.1.1    # DC3 to DC2 Data Tier
+DC3    10.20.0.0/16     10.40.1.1    # DC3 to DC1
+DC3    10.30.0.0/16     10.40.1.1    # DC3 to DC2
