--- a/configs/network/routing-tables.conf
+++ b/configs/network/routing-tables.conf
@@ -1,23 +1,14 @@
 # configs/network/routing-tables.conf
 # Enhanced routing with tier-based rules
 
-# ========================
-# DC1 → Other Datacenters
-# ========================
+# From DC1
+dc1 10.30.0.0/16 172.30.0.1
+dc1 10.40.0.0/16 172.40.0.1
 
-DC1    10.30.0.0/16     10.20.1.1    # DC1 to DC2
-DC1    10.40.0.0/16     10.20.1.1    # DC1 to DC3
+# From DC2
+dc2 10.20.0.0/16 172.20.0.1
+dc2 10.40.0.0/16 172.40.0.1
 
-# ========================
-# DC2 → Other Datacenters
-# ========================
-
-DC2    10.20.0.0/16     10.30.1.1    # DC2 to DC1
-DC2    10.40.0.0/16     10.30.1.1    # DC2 to DC3
-
-# ========================
-# DC3 → Other Datacenters
-# ========================
-
-DC3    10.20.0.0/16     10.40.1.1    # DC3 to DC1
-DC3    10.30.0.0/16     10.40.1.1    # DC3 to DC2
+# From DC3
+dc3 10.20.0.0/16 172.20.0.1
+dc3 10.30.0.0/16 172.30.0.1
