--- a/dockerfiles/Dockerfile.analytics-nginx
+++ b/dockerfiles/Dockerfile.analytics-nginx
@@ -4,4 +4,4 @@ COPY configs/nginx/analytics-nginx.conf /etc/nginx/nginx.conf
 COPY data/service-responses/analytics-nginx /usr/share/nginx/html/
 
 HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
- CMD curl -f http://localhost:8085/reports.json || exit 1
+ CMD curl -f http://localhost:8085/report.json || exit 1
