added service discovery

--- a/configs/nginx/catalog-nginx.conf
+++ b/configs/nginx/catalog-nginx.conf
@@ -16,5 +16,11 @@ http {
             root /usr/share/nginx/html;
             index products.json;
         }
+
+        location /health {
+            root /usr/share/nginx/html;
+            index health.html;
+            add_header Content-Type application/json;
+        }
     }
 }
