--- a/configs/nginx/gateway-nginx.conf
+++ b/configs/nginx/gateway-nginx.conf
@@ -17,5 +17,11 @@ http {
             root   /usr/share/nginx/html;
             index  index.html;
         }
+
+        location /health {
+            root /usr/share/nginx/html;
+            index health.html;
+            add_header Content-Type application/json;
+        }
     }
 }
