--- a/configs/nginx/discovery-nginx.conf
+++ b/configs/nginx/discovery-nginx.conf
@@ -16,5 +16,11 @@ http {
             root /usr/share/nginx/html;
             index services.json;
         }
+
+        location /health {
+            root /usr/share/nginx/html;
+            index health.html;
+            add_header Content-Type application/json;
+        }
     }
 }
