update nginx config

--- a/configs/nginx/gateway-nginx.conf
+++ b/configs/nginx/gateway-nginx.conf
@@ -19,9 +19,8 @@ http {
         }
 
         location /health {
-            root /usr/share/nginx/html;
-            index health.html;
-            add_header Content-Type application/json;
+            alias /usr/share/nginx/html/health.html;
+            default_type application/json;
         }
     }
 }
