--- a/configs/nginx/gateway-nginx.conf
+++ b/configs/nginx/gateway-nginx.conf
@@ -11,7 +11,7 @@ http {
 
     server {
         listen       80;
-        server_name  localhost;
+        server_name  _;
 
         location / {
             root   /usr/share/nginx/html;
