--- a/configs/nginx/payment-nginx.conf
+++ b/configs/nginx/payment-nginx.conf
@@ -10,7 +10,7 @@ http {
 
     server {
         listen 8083;
-        server_name localhost;
+        server_name _;
 
         location / {
             root /usr/share/nginx/html;
